[#960] Fixed misalignment

--- a/Dashboard/app/css/main.scss
+++ b/Dashboard/app/css/main.scss
@@ -2588,7 +2588,7 @@ ul.surveyInfo li.responseNumber {
     float: right;
     width: 30%;
     padding-right: 30px;
-    top: 5px;
+    top: 0px;
 }
 
 .aSurvey.aFolder {
